--- a/initiatives.html
+++ b/initiatives.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Initiatives </title>
 
-		<link rel="stylesheet" href="./css/grid.css">
-		<link rel="stylesheet" href="./css/main.css">
+		<link rel="stylesheet" href="./andy-css/grid.css">
+		<link rel="stylesheet" href="./andy-css/main.css">
 	</head>
 
     <body>
