upload greg images folder and extra image content

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link to CSS here -->
-    <link rel="stylesheet" href="greg_style.css">
+    <link rel="stylesheet" href="greg-css/greg_style.css">
     
     <!-- Window Title -->
     <title>Vancouver BC School Active Travel Program</title>
@@ -75,25 +75,25 @@
             <div class="box">
                 <p>Increasing physical activity among students, leading to healthier, happier, and more alert learners.</p>
                 <!-- image here -->
-                <img class="box-img" src="img/Extra_Images/TNMFamilyCouchMeeting_feature.jpg" alt="">
+                <img class="box-img" src="greg_img/img/Extra_Images/TNMFamilyCouchMeeting_feature.jpg" alt="">
             </div>
 
             <div class="box">
                 <p>Creating opportunities to engage with neighbours and socialize on the way to school.</p>
                 <!-- image here -->
-                <img class="box-img" src="img/Extra_Images/Three-kids-socializing.jpg" alt="">
+                <img class="box-img" src="greg_img/img/Extra_Images/Three-kids-socializing.jpg" alt="">
             </div>
 
             <div class="box">
                 <p>Reducing car travel to school, in turn decreasing traffic congestion, greenhouse gas emissions, and air pollution.</p>
                 <!-- image here -->
-                <img class="box-img" src="img/Extra_Images/kids_walk_to_school.jpg" alt="">
+                <img class="box-img" src="greg_img/img/Extra_Images/kids_walk_to_school.jpg" alt="">
             </div>
 
             <div class="box">
                 <p>Inspiring active travel habits early in life to carry into adulthood.</p>
                 <!-- image here -->
-                <img class="box-img" src="img/Extra_Images/kids_biking.jpg" alt="">
+                <img class="box-img" src="greg_img/img/Extra_Images/kids_biking.jpg" alt="">
             </div>
         </section>
 
