Center box & spacers

--- a/actionplan_new.html
+++ b/actionplan_new.html
@@ -42,6 +42,12 @@
             </header>
         </section> -->
 
+        <section class="top-container">
+            <header class="showcase-top">
+                <h1>Action Plan</h1>
+            </header>
+        </section>
+
         <!-- Navigation, using an unordered list and list item tags -->
         <nav class="main-nav">
             <ul>
@@ -60,26 +66,27 @@
         <!-- Mid Container, holds the subheading/info for the page -->
         <section class="mid-container">
             <header class="showcase-mid">
-                <h1>How we help overcome school travel challenges</h1>
+                <h2>How we help overcome school travel challenges</h2>
                 <h3>See how we improve infrastructure and support activities to encourage active travel.
                 </h3>
+                <p>Click the images for more information.</p>
             </header>
         </section>
 
-        <section class="low-container">
-            <p>Click the images for more information.</p>
-        </section>
+<!-- FIX THIS IF WE HAVE TIME PLZ FIND SPACER!-->
+
+        <section id="low-container"><p><br><br></p></section>
         
         <!-- Box Content -->
         <section class="boxes">          
-            <div class="box">
-                <h1><center>Art</center></h1>
+            <div class="box box_center">
+                <h2><center>Art</center></h2>
                 <!-- image here -->
                 <img class="box-img" src="greg_img/img/P4_Images/Student_art.jpg" alt="">
             </div>
 
-            <div class="box">
-                <h1><center>Infrastructure</center></h1>
+            <div class="box box_center">
+                <h2><center>Infrastructure</center></h2>
                 <!-- image here -->
                 <img class="box-img" src="greg_img/img/P4_Images/Pedestrian_or_bike_activated_signals.jpg" alt="">
             </div>
