update page css references

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link to CSS here -->
-    <link rel="stylesheet" href="./greg-css/greg_style.css">
-    <link rel="stylesheet" href="./greg-css/greg_extra.css">
+    <link rel="stylesheet" href="./greg_css/greg_style.css">
+    <link rel="stylesheet" href="./greg_css/greg_extra.css">
 
     
     <!-- Window Title -->
