--- a/actionplan_new.html
+++ b/actionplan_new.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link to CSS here -->
-    <link rel="stylesheet" href="greg-css/greg_style.css">
+    <link rel="stylesheet" href="./greg_css/greg_style.css">
     
     <!-- Window Title -->
     <title>Vancouver BC School Active Travel Program</title>
