--- a/art.html
+++ b/art.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Art</title>
-		<link rel="stylesheet" href="css/grid.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="./jacob-css/grid.css">
+		<link rel="stylesheet" href="./jacob-css/main.css">
 
 	</head>
 <body>
