fixed a spelling mistake in my buttons

--- a/art.html
+++ b/art.html
@@ -24,7 +24,7 @@
 
          <ul>
                <li><a href="#">Home</a></li>
-              <li><a href="#">Root Maps</a></li>
+              <li><a href="#">Route Maps</a></li>
              <li><a href="#">Action Plan</a></li>
              <li><a href="#">Initiatives</a></li>
               <li><a href="#">Art</a></li>
