updated home page sections to "info" and begin route_maps page

--- a/home.html
+++ b/home.html
@@ -64,8 +64,14 @@
             </header>
         </section>
 
-        <section class="low-container">
-            <h4>School Active Travel Planning has many benefits for students, the community, and the environment, including:</h4>
+        <section><p></p></section>
+
+        <!-- Big Box information/image section -->
+        <section class="info">
+            <!-- image here -->
+            <div>
+                <h4>School Active Travel Planning has many benefits for students, the community, and the environment, including:</h4>
+            </div>
         </section>
         
         <!-- Box Content -->
@@ -95,6 +101,8 @@
             </div>
         </section>
 
+        <section><p></p></section>
+
         <!-- Big Box information/image section -->
         <section class="info">
             <!-- image here -->
@@ -105,8 +113,14 @@
             </div>
         </section>
 
-        <section class="low-container">
-            <h4>Our Focus is to:</h4>
+        
+
+        <!-- Big Box information/image section -->
+        <section class="info">
+            <!-- image here -->
+            <div>
+                <h4>Our Focus is to:</h4>
+            </div>
         </section>
 
 
