Updated home and route pages, tidied up background images and footer

--- a/home.html
+++ b/home.html
@@ -44,13 +44,13 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="#">Route Maps</a></li>
-                <li><a href="#">Action Plan</a></li>
-                <li><a href="#">Initiatives</a></li>
+                <li><a href="route_maps.html">Route Maps</a></li>
+                <li><a href="actionplan_new.html">Action Plan</a></li>
+                <li><a href="initiatives.html">Initiatives</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
                 <li><a href="contact & comment.html">Contact</a></li>
-                <li><a href="https://vancouver.ca/">Blank?</a></li>
+                <li><a href="https://vancouver.ca/">Vancouver</a></li>
 
             </ul>
         </nav>
@@ -64,10 +64,8 @@
             </header>
         </section>
 
-        <section><p></p></section>
-
         <!-- Big Box information/image section -->
-        <section class="info">
+        <section class="info benefits">
             <!-- image here -->
             <div>
                 <h4>School Active Travel Planning has many benefits for students, the community, and the environment, including:</h4>
@@ -77,31 +75,33 @@
         <!-- Box Content -->
         <section class="boxes">          
             <div class="box">
-                <p>Increasing physical activity among students, leading to healthier, happier, and more alert learners.</p>
+                <h4>Increasing Physical Activity</h4>
+                <p>Leading to healthier, happier, and more alert learners.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/TNMFamilyCouchMeeting_feature.jpg" alt="">
             </div>
 
             <div class="box">
-                <p>Creating opportunities to engage with neighbours and socialize on the way to school.</p>
+                <h4>Creating Opportunities</h4>
+                <p>That enables students to engage with neighbours and socialize on the way to school.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/Three-kids-socializing.jpg" alt="">
             </div>
 
             <div class="box">
-                <p>Reducing car travel to school, in turn decreasing traffic congestion, greenhouse gas emissions, and air pollution.</p>
+                <h4>Reducing Car Travel</h4>
+                <p>In turn decreasing traffic congestion, greenhouse gas emissions, and air pollution.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/kids_walk_to_school.jpg" alt="">
             </div>
 
             <div class="box">
-                <p>Inspiring active travel habits early in life to carry into adulthood.</p>
+                <h4>Inspiring Active Travel</h4>
+                <p>To develop habits early in life to carry into adulthood.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/kids_biking.jpg" alt="">
             </div>
         </section>
-
-        <section><p></p></section>
 
         <!-- Big Box information/image section -->
         <section class="info">
@@ -116,36 +116,18 @@
         
 
         <!-- Big Box information/image section -->
-        <section class="info">
+        <section class="info focus">
             <!-- image here -->
             <div>
                 <h4>Our Focus is to:</h4>
-            </div>
-        </section>
-
-
-        <section class="boxes">
-            
-            <div class="box">
-                <!-- image here -->
                 <p>Encourage more children and their families to walk, cycle, and roll to school</p>
-            </div>
-
-            <div class="box">
-                <!-- image here -->
                 <p>Improve walking and cycling infrastructure around schools</p>
-            </div>
-
-            <div class="box">
-                <!-- image here -->
                 <p>Increase education and awareness around active transportation</p>
             </div>
         </section>
 
         <!-- Footer -->
-        <footer>
-            <p>SFU IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</p>
-        </footer>
+        <footer>SFU IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
 
 
     </div>  
