linked nav bar -- blank is going to city of vancouver website

--- a/actionplan_new.html
+++ b/actionplan_new.html
@@ -51,14 +51,14 @@
         <!-- Navigation, using an unordered list and list item tags -->
         <nav class="main-nav">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Route Maps</a></li>
-                <li><a href="#">Action Plan</a></li>
-                <li><a href="#">Initiatives</a></li>
-                <li><a href="#">Art</a></li>
-                <li><a href="#">Infrastructure</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blank?</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="route_maps.html">Route Maps</a></li>
+                <li><a href="actionplan_new.html">Action Plan</a></li>
+                <li><a href="initiatives.html">Initiatives</a></li>
+                <li><a href="art.html">Art</a></li>
+                <li><a href="Infrastructure.html">Infrastructure</a></li>
+                <li><a href="contact & comment.html">Contact</a></li>
+                <li><a href="https://vancouver.ca/">Blank?</a></li>
 
             </ul>
         </nav>
