--- a/contact & comment.html
+++ b/contact & comment.html
@@ -23,14 +23,14 @@
 		<!-- Navigation, using an unordered list and list item tags -->
 		<nav class="main-nav">
 			<ul>
-				<li><a href="#" class="nav-main-item">Home</a></li>
-				<li><a href="#" class="nav-main-item">Route Maps</a></li>
-				<li><a href="#" class="nav-main-item">Action Plan</a></li>
-				<li><a href="#" class="nav-main-item">Initiatives</a></li>
-				<li><a href="#" class="nav-main-item">Art</a></li>
-				<li><a href="#" class="nav-main-item">Infrastructure</a></li>
-				<li><a href="#" class="nav-main-item">Contact</a></li>
-				<li><a href="#" class="nav-main-item">Comments</a></li>
+				<li><a href="home.html" class="nav-main-item">Home</a></li>
+				<li><a href="route_maps.html" class="nav-main-item">Route Maps</a></li>
+				<li><a href="actionplan_new.html" class="nav-main-item">Action Plan</a></li>
+				<li><a href="initiatives.html" class="nav-main-item">Initiatives</a></li>
+				<li><a href="art.html" class="nav-main-item">Art</a></li>
+				<li><a href="Infrastructure.html" class="nav-main-item">Infrastructure</a></li>
+				<li><a href="contact & comment.html" class="nav-main-item">Contact</a></li>
+				<li><a href="https://vancouver.ca/" class="nav-main-item">Blank?</a></li>
 	
 			</ul>
 		</nav>
