updated window titles

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
     
     <!-- Window Title -->
-    <title>Vancouver BC School Active Travel Program</title>
+    <title>Home | Vancouver BC School Active Travel Program</title>
 </head>
 <!-- end Head -->
 
@@ -74,28 +74,28 @@
         
         <!-- Box Content -->
         <section class="boxes">          
-            <div class="box">
+            <div class="box_extend">
                 <h4>Increasing Physical Activity</h4>
                 <p>Leading to healthier, happier, and more alert learners.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/TNMFamilyCouchMeeting_feature.jpg" alt="">
             </div>
 
-            <div class="box">
+            <div class="box_extend">
                 <h4>Creating Opportunities</h4>
                 <p>That enables students to engage with neighbours and socialize on the way to school.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/Three-kids-socializing.jpg" alt="">
             </div>
 
-            <div class="box">
+            <div class="box_extend">
                 <h4>Reducing Car Travel</h4>
                 <p>In turn decreasing traffic congestion, greenhouse gas emissions, and air pollution.</p>
                 <!-- image here -->
                 <img class="box-img" src="./greg_img/img/Extra_Images/kids_walk_to_school.jpg" alt="">
             </div>
 
-            <div class="box">
+            <div class="box_extend">
                 <h4>Inspiring Active Travel</h4>
                 <p>To develop habits early in life to carry into adulthood.</p>
                 <!-- image here -->
