--- a/initiatives.html
+++ b/initiatives.html
@@ -24,7 +24,7 @@
 
     
     <!-- Window Title -->
-    <title>Initiatives</title>
+    <title>Initiatives | Vancouver BC School Active Travel Program</title>
 </head>
 <!-- end Head -->
 
