--- a/route_maps.html
+++ b/route_maps.html
@@ -25,7 +25,7 @@
 
     
     <!-- Window Title -->
-    <title>Route Maps</title>
+    <title>Route Maps | Vancouver BC School Active Travel Program</title>
 </head>
 <!-- end Head -->
 
