--- a/actionplan.html
+++ b/actionplan.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Action Plan </title>
+		<title>Action Plan | Vancouver BC School Active Travel Program </title>
 
 		<link rel="stylesheet" href="./css/grid.css">
 		<link rel="stylesheet" href="./css/main.css">
