--- a/actionplan_new.html
+++ b/actionplan_new.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./greg_css/greg_style.css">
     
     <!-- Window Title -->
-    <title>Vancouver BC School Active Travel Program</title>
+    <title>Action Plan | Vancouver BC School Active Travel Program</title>
 </head>
 <!-- end Head -->
 
