--- a/art.html
+++ b/art.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Art</title>
+		<title>Art | Vancouver BC School Active Travel Program</title>
 		<link rel="stylesheet" href="./greg_css/greg_style.css">
 
 	</head>
