--- a/contact & comment.html
+++ b/contact & comment.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Contact</title>
+		<title>Contact | Vancouver BC School Active Travel Program</title>
 		<link rel="stylesheet" href="Contact & Comments CSS/Tryout.css">
 
 	</head>
