added comment references at the top of each html

--- a/actionplan.html
+++ b/actionplan.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
 	
+	<!-- SFU IAT235 P4 Action Plan Page by Greg, Andy, Jacob, Jonathan -->
+    
+    <!-- additional HTML/CSS resources via:
+    https://css-tricks.com/apply-a-filter-to-a-background-image/
+    https://www.youtube.com/watch?v=RhUuMl3R1PE&ab_channel=DevDreamer
+    https://www.youtube.com/watch?v=moBhzSC455o&ab_channel=TraversyMedia
+    https://kit.fontawesome.com/d916958db1.js
+    https://stackoverflow.com/questions/5703552/how-can-i-center-text-horizontally-and-vertically-inside-a-div-block
+    https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Backgrounds_and_Borders/Resizing_background_images
+    https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Box_Alignment_in_CSS_Grid_Layout
+    https://www.digitalocean.com/community/tutorials/css-cropping-images-object-fit
+    -->
+
 	<head>
 
 		<meta charset="utf-8">
