--- a/route_maps.html
+++ b/route_maps.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <!-- SFU IAT235 P4 Route Maps Page by Greg, Andy, Jacob, Jonathan -->
 
-    <!-- IAT235 P4 Route Maps Page by Gregory Withers -->
     <!-- additional HTML/CSS resources via:
     https://css-tricks.com/apply-a-filter-to-a-background-image/
     https://www.youtube.com/watch?v=RhUuMl3R1PE&ab_channel=DevDreamer
