Edited school images and update button class in main css

--- a/route_maps.html
+++ b/route_maps.html
@@ -76,10 +76,12 @@
  <section id="admiral_seymour" class="info seymour">
     <div>
         <h2>Admiral Seymour</h2>
-        <p>route map button</p>
-        <p>action plan button</p>
-        <p>report button</p>  
-            <p>Description of the school. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis veniam ipsa accusantium rerum expedita fugiat at architecto voluptates exercitationem nobis provident quaerat ratione molestiae nostrum delectus quam, vitae in incidunt?</p>  
+        <box> 
+            <a href="#" class="btn">Route Map</a>
+            <a href="#" class="btn">Action Plan</a>
+            <a href="#" class="btn">Report</a>
+        </box>
+        <p>Description of the school. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis veniam ipsa accusantium rerum expedita fugiat at architecto voluptates exercitationem nobis provident quaerat ratione molestiae nostrum delectus quam, vitae in incidunt?</p>  
     </div>
 </section>
 
