update home and route map images, alt text, credits, added inline_link class for paragraph links

--- a/home.html
+++ b/home.html
@@ -12,6 +12,27 @@
     https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Backgrounds_and_Borders/Resizing_background_images
     https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Box_Alignment_in_CSS_Grid_Layout
     https://www.digitalocean.com/community/tutorials/css-cropping-images-object-fit
+    https://www.w3schools.com/css/css_link.asp-->
+
+
+    <!-- TO DO NOV 30 2020 
+    
+    - in-text links in home page, check others as well DONE
+    - update banner imgs for benefits, focus DONE
+    - update imgs for each box === especially physical activity, car travel, and active travel. DONE
+     - link focus/partnerships section to exterior vancouver resources DONE
+    - focus and partnerships headings the same?? YES, DONE
+    - double check all route map links work correctly
+    - john franklin address fix DONE
+
+    - link boxes to other pages ASK
+    - Box headings too large?? art/infrastructure? ASK
+    - Main page H1 should be page name or Vancouver Active Travel etc ASK
+
+    - img credits in comments at appropriate place TO DO STILL
+    - Focus panel needs extra content to fill appropriately.. TO DO STILL
+
+
     -->
 
 <head>
@@ -50,7 +71,7 @@
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
                 <li><a href="contact & comment.html">Contact</a></li>
-                <li><a href="https://vancouver.ca/">Vancouver</a></li>
+                <li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
 
             </ul>
         </nav>
@@ -77,22 +98,20 @@
             <div class="box_extend">
                 <h4>Increasing Physical Activity</h4>
                 <p>Leading to healthier, happier, and more alert learners.</p>
-                <!-- image here -->
-                <img class="box-img" src="./greg_img/img/Extra_Images/TNMFamilyCouchMeeting_feature.jpg" alt="">
+                <img class="box-img" src="./greg_img/img/new_banner_imgs/mi-pham-xtd3zYWxEs4-unsplash.jpg" alt="young girl wearing an orange shirt and friends are running and playing in a circle. They are laughing and having fun">
             </div>
 
             <div class="box_extend">
                 <h4>Creating Opportunities</h4>
                 <p>That enables students to engage with neighbours and socialize on the way to school.</p>
-                <!-- image here -->
-                <img class="box-img" src="./greg_img/img/Extra_Images/Three-kids-socializing.jpg" alt="">
+                <img class="box-img" src="./greg_img/img/Extra_Images/Three-kids-socializing.jpg" alt="three young children sitting in a row wearing backpacks laughing and smiling. The two outside children are looking at the middle child.">
             </div>
 
             <div class="box_extend">
                 <h4>Reducing Car Travel</h4>
                 <p>In turn decreasing traffic congestion, greenhouse gas emissions, and air pollution.</p>
                 <!-- image here -->
-                <img class="box-img" src="./greg_img/img/Extra_Images/kids_walk_to_school.jpg" alt="">
+                <img class="box-img" src="./greg_img/img/new_banner_imgs/tony-mucci-FzWD0tKDfuI-unsplash.jpg" alt="">
             </div>
 
             <div class="box_extend">
@@ -107,9 +126,9 @@
         <section class="info">
             <!-- image here -->
             <div>
-                <h2>Partnerships</h2>
-                <p>The program is a partnership between the City of Vancouver and Vancouver School Board, and is a direct outcome of our Transportation 2040 Plan.</p>
-                <p>The program also	supports our Climate Emergency Action Plan targets</p>
+                <h4>Partnerships</h4>
+                <p>The program is a partnership between the <a class="inline_link" href="https://vancouver.ca/">City of Vancouver</a> and <a class="inline_link" href="https://www.vsb.bc.ca/Pages/default.aspx">School Board</a>, and is a direct outcome of our <a class="inline_link" href="https://vancouver.ca/streets-transportation/transportation-2040.aspx"> Transportation 2040 Plan.</p></a>
+                <p>The program also	supports our <a class="inline_link" href="https://vancouver.ca/green-vancouver/vancouvers-climate-emergency.aspx">Climate Emergency Action Plan</a> targets</p>
             </div>
         </section>
 
@@ -117,12 +136,11 @@
 
         <!-- Big Box information/image section -->
         <section class="info focus">
-            <!-- image here -->
             <div>
                 <h4>Our Focus is to:</h4>
-                <p>Encourage more children and their families to walk, cycle, and roll to school</p>
-                <p>Improve walking and cycling infrastructure around schools</p>
-                <p>Increase education and awareness around active transportation</p>
+                <p>Encourage more children and their families to walk, cycle, and roll to school.</p>
+                <p>Improve walking and cycling <a class="inline_link" href="Infrastructure.html"> infrastructure</a> around schools.</p>
+                <p>Increase education and awareness around <a class="inline_link" href="initiatives.html">active transportation</a> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nisi illum tempora perspiciatis facilis, sit totam veritatis sunt atque fuga sapiente alias. Aliquid et odit animi doloremque accusamus fugit sint?</p>
             </div>
         </section>
 
