update links and blank nav button to vancouver.ca

--- a/actionplan_new.html
+++ b/actionplan_new.html
@@ -58,7 +58,7 @@
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
                 <li><a href="contact & comment.html">Contact</a></li>
-                <li><a href="https://vancouver.ca/">Blank?</a></li>
+                <li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
 
             </ul>
         </nav>
