--- a/contact & comment.html
+++ b/contact & comment.html
@@ -30,7 +30,7 @@
 				<li><a href="#" class="nav-main-item">Art</a></li>
 				<li><a href="#" class="nav-main-item">Infrastructure</a></li>
 				<li><a href="#" class="nav-main-item">Contact</a></li>
-				<li><a href="#" class="nav-main-item">Comments</a></li>
+				<li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
 	
 			</ul>
 		</nav>
