--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
     - link boxes to other pages ASK
     - Box headings too large?? art/infrastructure? ASK
     - Main page H1 should be page name or Vancouver Active Travel etc ASK
+    - Do we need to have the old action plan html ?? ASK
 
     - img credits in comments at appropriate place TO DO STILL
     - Focus panel needs extra content to fill appropriately.. TO DO STILL
@@ -81,7 +82,7 @@
             <header class="showcase-mid">
                 <h2>Program Benefits</h2>
                 <h3>The School Active Travel Planning program encourages and promotes walking, cycling, and rolling to school</h3>
-                <p>	We consult with school communities and other stakeholders to identify school transportation challenges and opportunities.</p>
+                <p>	We <a class="inline_link" href="initiatives.html">consult</a> with school communities and other stakeholders to identify school transportation challenges and opportunities.</p>
             </header>
         </section>
 
@@ -145,8 +146,11 @@
         </section>
 
         <!-- Footer -->
-        <footer>SFU IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
+        <footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+            ">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
         
+
+
     </div>  
     <!-- Wrapper ends here -->
 </body>
