--- a/route_maps.html
+++ b/route_maps.html
@@ -114,7 +114,7 @@
 
         <a target="_blank" href="https://www.google.com/maps?q=simon+fraser+elementary+school+vancouver+bc&rlz=1C1CHBF_enCA815CA815&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiJ2dbq8MD0AhUSMH0KHeKKDPIQ_AUoAXoECAEQAw"><p>100 W 15th Ave, Vancouver, BC V5Y 3B7</p></a>  
 
-        <a target="_blank" ref="https://vancouver.ca/files/cov/simon-fraser-elementary-map-resource.pdf" class="btn">Route Map</a>
+        <a target="_blank" href="https://vancouver.ca/files/cov/simon-fraser-elementary-map-resource.pdf" class="btn">Route Map</a>
 
         <a target="_blank" href="https://vancouver.ca/files/cov/simon-fraser-elementary-action-plan.pdf" class="btn">Action Plan</a>
       
