update footer on all pages

--- a/contact & comment.html
+++ b/contact & comment.html
@@ -186,7 +186,9 @@
 			</div>
 		</nav>
 		
-
+<!-- Footer -->
+<footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+	">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
 		
 	</div>
 	</body>
