--- a/home.html
+++ b/home.html
@@ -17,22 +17,29 @@
 
     <!-- TO DO NOV 30 2020 
     
+    DONE
     - in-text links in home page, check others as well DONE
     - update banner imgs for benefits, focus DONE
     - update imgs for each box === especially physical activity, car travel, and active travel. DONE
-     - link focus/partnerships section to exterior vancouver resources DONE
+    - link focus/partnerships section to exterior vancouver resources DONE
     - focus and partnerships headings the same?? YES, DONE
     - double check all route map links work correctly
     - john franklin address fix DONE
 
+    ASK
     - link boxes to other pages ASK
     - Box headings too large?? art/infrastructure? ASK
     - Main page H1 should be page name or Vancouver Active Travel etc ASK
     - Do we need to have the old action plan html ?? ASK
+    - Jonathan css file upload
+    - remove old/unused css files
+    - remove "CENTER" calls in HTML for action plan pages, check others
+    - double check image choices, all pages
 
+    TO DO STILL
     - img credits in comments at appropriate place TO DO STILL
     - Focus panel needs extra content to fill appropriately.. TO DO STILL
-
+    - Footer bar on all pages
 
     -->
 
