--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -121,8 +121,8 @@
 
        </div>
 
-       <footer>
-        <p>SFU IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</p>
-    </footer>
+       <!-- Footer -->
+       <footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+        ">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
     </body>   
     
