--- a/actionplan_new.html
+++ b/actionplan_new.html
@@ -91,7 +91,9 @@
 
         </section>
 
-      
+      <!-- Footer -->
+      <footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+        ">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
 
     </div>  
     <!-- Wrapper ends here -->
