--- a/art.html
+++ b/art.html
@@ -87,9 +87,9 @@
             </div>
     
    </section>
-   <footer>
-    <p>SFU IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</p>
-</footer>
+   <!-- Footer -->
+   <footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+    ">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
 </body>
 
 
