as previous (forgot footer on route maps)

--- a/route_maps.html
+++ b/route_maps.html
@@ -137,8 +137,9 @@
 </section>
 </div>
 <!-- Footer -->
-<footer>SFU IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
-
+<!-- Footer -->
+<footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+    ">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
     </div>  
     <!-- Wrapper ends here -->
 </body>
