--- a/contact & comment.html
+++ b/contact & comment.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Contact</title>
-		<link rel="stylesheet" href="Contact & Comments CSS/Tryout.css">
+		<link rel="stylesheet" href="jonathan_css/jonathan.css">
 
 	</head>
 
