jonathan html connected to all other html main nav

--- a/contact & comment.html
+++ b/contact & comment.html
@@ -22,18 +22,18 @@
         </section>
 		<!-- Navigation, using an unordered list and list item tags -->
 		<nav class="main-nav">
-			<ul>
-				<li><a href="#" class="nav-main-item">Home</a></li>
-				<li><a href="#" class="nav-main-item">Route Maps</a></li>
-				<li><a href="#" class="nav-main-item">Action Plan</a></li>
-				<li><a href="#" class="nav-main-item">Initiatives</a></li>
-				<li><a href="#" class="nav-main-item">Art</a></li>
-				<li><a href="#" class="nav-main-item">Infrastructure</a></li>
-				<li><a href="#" class="nav-main-item">Contact</a></li>
-				<li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
-	
-			</ul>
-		</nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="route_maps.html">Route Maps</a></li>
+                <li><a href="actionplan_new.html">Action Plan</a></li>
+                <li><a href="initiatives.html">Initiatives</a></li>
+                <li><a href="art.html">Art</a></li>
+                <li><a href="Infrastructure.html">Infrastructure</a></li>
+                <li><a href="contact & comment.html">Contact</a></li>
+                <li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
+
+            </ul>
+        </nav>
 
 		<!-- Mid Container, holds the subheading/info for the page -->
 		<section class="mid-container">
