--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -21,7 +21,6 @@
 
 		<title>Infrastructure | Vancouver BC School Active Travel Program</title>
         <link rel="stylesheet" href="./greg_css/greg_style.css">
-        <link rel="stylesheet" href="./jacob-css/jacob_extra.css">
 
 	</head>
 
@@ -59,60 +58,60 @@
         </section>
 
     <section class="boxes">
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>Speed Humps</h2>
              <img class="box-img" src ="img/Speed_humps.jpg" alt="Speed Humps near a school" width=720 height=350>
              <p>Speed humps are a traffic calming measure used to reduce vehicle volume and speed on local streets. Pictured: Lord Kitchener Elementary, W 24th Ave between Collingwood St and Blenheim St.
             </p>
         </div>
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>Barriers</h2>
              <img class="box-img" src="img/Barriers.jpg" alt="Barriers near a sidewalk that help protect people from cars." width=720 height=300>
             <p>These low-gravity concrete barriers regulate traffic flow and discourage U-turn activity. Pictured: Eric Hamber Secondary, Willow St at W 35th Ave.
             </p>
         </div>
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>New Sidewalks and Curbs</h2>
             <img class="box-img" src ="img/New_sidewalks_and_curbs.jpg" alt="New sidewalks and curbs in front of a school." width=730 height=350>
             <p>Sidewalk segments address gaps in the walking network. Sidewalks and curbs provide a continuous walking experience separating people from traffic. Pictured: Lord Kitchener Elementary, Collingwood St between W 24th Ave and W King Edward Ave.
             </p>
         </div>
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>Curb Ramps</h2>
             <img class="box-img" src="img/Curb_ramps.jpg" alt="A curb ram that makes it easier for bikes and wheelchairs to get onto the sidewalk." width=720 height=350>
             <p>Curb ramps and bus pads improve accessibility for people using wheelchairs, walkers, and strollers. Pictured: Sir Sandford Fleming Elementary, Lanark St at E 47th Ave.
             </p>
         </div>
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>New Marked and Raised Crosswalks</h2>
             <img class="box-img" src="img/New_marked_and_raised_crosswalks.jpg" alt="Raised crosswalk infront of a school to slow down cars and protect students." width=960 height=542 >
             <p>Crosswalks alert people driving to expect people walking. Raised crosswalks reduce vehicle speed and increases pedestrian visibility. Pictured: Thunderbird Elementary, Cassiar St at Hermon Drive.
             </p>
         </div>
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>Rapid Flashing Beacons</h2>
             <img class="box-img" src="img/Rapid_flashing_beacons.jpg" alt="Rapid flashing lights above speed sign that go off when cars go too fast." width=720 hight=350>
             <p>These high intensity amber flashing beacons installed at crosswalks, activated by a pedestrian push-button. The beacons increase pedestrian visibility and alert people driving to yield at marked crosswalks. Pictured: Renfrew Elementary, Cassiar St at E 22nd Ave.
             </p>
         </div>
-      <div class="box_extend grey_box">
+      <div class="box_extend">
           <h2>Pedestrian Signalized Crossing Improvement</h2>
          <img class="box-img" src="img/Pedestrian_signalized_crossing_improvement.jpg" alt="Improved signs to help the pedestrians cross the street." width=720 hight=350 >
          <p>Countdown timers show how much time is left to cross the street at an intersection. This reduces the number of people crossing the intersection when the light changes. Pictured: Lord Kitchener Elementary, Blenheim St at W King Edward Ave.
         </p>
      </div>
-        <div class="box_extend grey_box">
+        <div class="box_extend">
             <h2>Signage</h2>
            <img class="box-img" src="img/Signage.jpg" alt="New signs that help with drop offs and pick ups." width=960 hight=720 >
            <p>Clarifies pick-up/drop-off operations, indicates various parking regulations, and improves sight-lines.
         </p>
     </div>
-          <div class="box_extend grey_box">
+          <div class="box_extend">
             <h2>Protected Bicycle Lane</h2>
            <img class="box-img" src="img/Protected_bicycle_lane.jpg" alt="Bike lanes on the steet that make biking more safe." width=960 hight=638 >
            <p>On-street bike facility physically separated from motor vehicles. Can be elevated or protected by various treatments such as a curb, median, and/or bollards. Pictured: Eric Hamber Secondary, Willow St between W 33rd Ave and W 35th Ave</p>
           </div>
-          <div class="box_extend grey_box">
+          <div class="box_extend">
             <h2>Bus Pad</h2>
            <img class="box-img" src="img/Bus_pad.jpg" alt="A bus pad that helps people in wheelchairs and walkers access the bus more easily." width=960 hight=657 >
            <p>Improves access for people using wheelchairs, walkers, and strollers to get to the bus waiting area. Pictured: Carnarvon Community Elementary, W 16th Ave at Balaclava St.
