--- a/art.html
+++ b/art.html
@@ -21,7 +21,6 @@
 
 		<title>Art | Vancouver BC School Active Travel Program</title>
 		<link rel="stylesheet" href="./greg_css/greg_style.css">
-        <link rel="stylesheet" href="./jacob-css/jacob_extra.css">
 
 	</head>
 <body>
@@ -56,7 +55,7 @@
     </section>
 
    <section class="boxes">
-       <div class= "box_extend grey_box">
+       <div class= "box_extend">
            <h2>Street Mural</h2>
          <img class="box-img" src ="img/Street_mural.jpeg" alt="A street mural on a tall wall"width=720 height=350>
           <p>Street murals are a school or community-led initiative, supported by the City, to apply artwork to the street as a traffic-calming measure.</p>
@@ -65,7 +64,7 @@
 
        </div>
 
-       <div class= "box_extend grey_box">
+       <div class= "box_extend">
             <h2>Student Art</h2>
             <img class="box-img" src ="img/Student_art.jpg" alt="Art work created by students" width=720 height=350>
             <p>Signs and artworks created by students raise awareness of travel safety around the school. 
@@ -73,14 +72,14 @@
            Pictured: Sir Sandford Fleming Elementary.</p>
        </div>
 
-        <div class= "box_extend grey_box">
+        <div class= "box_extend">
             <h2>Pedestrian Decals</h2>
             <img class="box-img" src ="img/Pedestrian_decal_safety_tips.jpg" alt="Pedestrian decal with safety tips on it" width=500 height=268>
             <p>Pedestrian decal – Safety tips
                 Installed above the pedestrian crossing button, this placard reminds users of the correct crossing etiquette.  Remember, pedestrians should only ever enter an intersection when the white crossing silhouette is illuminated.</p>
          </div>
 
-         <div class= "box_extend grey_box">
+         <div class= "box_extend">
              <h2>Will's Jams Concert</h2>
             <img class="box-img" src ="img/Wills_Jams_concert.jpg" alt="Will's Jams concert infront of kids"width=720 height=350>
             <p>Will’s Jams concert
