changed the text, added margins, fixed image issues.

--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -21,6 +21,8 @@
 
 		<title>Infrastructure | Vancouver BC School Active Travel Program</title>
         <link rel="stylesheet" href="./greg_css/greg_style.css">
+        <link rel="stylesheet" href="./greg_css/greg_extra.css">
+
 
 	</head>
 
@@ -30,7 +32,7 @@
 
             <section class="top-container">
                 <header class="showcase-top">
-                    <h1>Vancouver School Active Travel Program</h1>
+                    <h1>Infrastructure</h1>
                 </header>
             </section>
 
@@ -52,7 +54,7 @@
 
         <section class="mid-container">
             <header class="showcase-mid">
-                <h1>Infrastructure</h1>
+                <h2>Infrastructure changes to make the city safer</h2>
                
             </header>
         </section>
