--- a/art.html
+++ b/art.html
@@ -21,6 +21,7 @@
 
 		<title>Art | Vancouver BC School Active Travel Program</title>
 		<link rel="stylesheet" href="./greg_css/greg_style.css">
+        <link rel="stylesheet" href="./greg_css/greg_extra.css">
 
 	</head>
 <body>
@@ -30,7 +31,7 @@
 
             <section class="top-container">
                 <header class="showcase-top">
-                    <h1>Vancouver School Active Travel Program</h1>
+                    <h1>Art</h1>
                 </header>
             </section>
 
@@ -49,7 +50,7 @@
     
     <section class="mid-container">
         <header class="showcase-mid">
-            <h1>Art</h1>
+            <h2>Art and events to create a safer city</h2>
            
         </header>
     </section>
