--- a/actionplan.html
+++ b/actionplan.html
@@ -53,7 +53,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="route_maps.html">Route Maps</a></li>
-                <li><a href="actionplan_new.html">Action Plan</a></li>
+                <li><a href="actionplan.html">Action Plan</a></li>
                 <li><a href="initiatives.html">Initiatives</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
