Images for initiatives

--- a/initiatives.html
+++ b/initiatives.html
@@ -44,12 +44,13 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="route_maps.html">Route Maps</a></li>
-                <li><a href="actionplan_new.html">Action Plan</a></li>
+                <li><a href="actionplan.html">Action Plan</a></li>
                 <li><a href="initiatives.html">Initiatives</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
                 <li><a href="contact & comment.html">Contact</a></li>
                 <li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
+
                 
             </ul>
         </nav>
@@ -76,7 +77,7 @@
         
 
         <!-- Big Box information/image section -->
-        <section id="SS" class="info">
+        <section id="SS" class="ss-info">
             <!-- image here -->
             <div>
                 <h2>School Streets </h2>
@@ -86,7 +87,7 @@
             </div>
         </section>
 
-        <section id="WCE" class="info">
+        <section id="WCE" class="wce-info">
             <!-- image here -->
             <div>
                 <h2>Walking and Cycling Education </h2>
@@ -100,7 +101,7 @@
             </div>
         </section>
 
-        <section id="WBRMG" class="info">
+        <section id="WBRMG" class="wbrmg-info">
             <!-- image here -->
             <div>
                 <h2>Walk + Bike + Roll Mini Grants</h2>
@@ -134,7 +135,7 @@
             </div>
         </section>
 
-        <section id="WSB" class="info">
+        <section id="WSB" class="wsb-info">
             <!-- image here -->
             <div>
                 <h2>Walking School Bus </h2>
@@ -156,7 +157,7 @@
             </div>
         </section>
 
-        <section id="CS" class="info">
+        <section id="CS" class="cs-info">
             <!-- image here -->
             <div>
                 <h2>Chill Skateboarding </h2>
@@ -167,7 +168,7 @@
             </div>
         </section>
 
-        <section id="GM" class="info">
+        <section id="GM" class="gm-info">
             <!-- image here -->
             <div>
                 <h2>Grandma on the Move </h2>
@@ -177,7 +178,7 @@
             </div>
         </section>
 
-        <section id="PPA" class="info">
+        <section id="PPA" class="ppa-info">
             <!-- image here -->
             <div>
                 <h2>Planet Protector Academy </h2>
@@ -188,7 +189,7 @@
             </div>
         </section>
 
-        <section id="HBSW" class="info">
+        <section id="HBSW" class="hbsw-info">
             <!-- image here -->
             <div>
                 <h2>HUB’s Bike to School Week </h2>
