--- a/actionplan.html
+++ b/actionplan.html
@@ -77,17 +77,21 @@
         
         <!-- Box Content -->
         <section class="boxes box-margin-top">          
-            <div class="box_fill">
-                <h2 class="center-text">Art</h2>
-                <!-- image here -->
-                <img class="box_img_fill" src="greg_img/img/P4_Images/Student_art.jpg" alt="">
-            </div>
+            <a href="art.html">
+                <div class="box_fill">
+                    <h2 class="center-text">Art</h2>
+                    <!-- image here -->
+                    <img class="box_img_fill" src="greg_img/img/P4_Images/Student_art.jpg" alt="">
+                </div>
+            </a>
 
-            <div class="box_fill center">
-                <h2 class="center-text">Infrastructure</h2>
-                <!-- image here -->
-                <img class="box_img_fill" src="greg_img/img/P4_Images/Pedestrian_or_bike_activated_signals.jpg" alt="">
-            </div>
+            <a href="Infrastructure.html">
+                <div class="box_fill center">
+                    <h2 class="center-text">Infrastructure</h2>
+                    <!-- image here -->
+                    <img class="box_img_fill" src="greg_img/img/P4_Images/Pedestrian_or_bike_activated_signals.jpg" alt="">
+                </div>
+            </a>
 
         </section>
 
