added links to almost every box

--- a/art.html
+++ b/art.html
@@ -60,17 +60,17 @@
            <h4>Street Mural</h4>
          <img class="box-img" src ="img/Street_mural.jpeg" alt="A street mural on a tall wall"width=720 height=350>
           <p>Street murals are a school or community-led initiative, supported by the City, to apply artwork to the street as a traffic-calming measure.</p>
-          <p>
-        Pictured: Sir Sandford Fleming Elementary.</p>
+        
+            <p> Pictured:<a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspxs">Sir Sandford Fleming Elementary</a> .</p>
 
        </div>
 
        <div class= "box_extend">
             <h4>Student Art</h4>
             <img class="box-img" src ="img/Student_art.jpg" alt="Art work created by students" width=720 height=350>
-            <p>Signs and artworks created by students raise awareness of travel safety around the school. 
+            <p>Signs and artworks created by students raise awareness of travel safety around the school. </p>
 
-           Pictured: Sir Sandford Fleming Elementary.</p>
+                <p> Pictured:<a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspxs">Sir Sandford Fleming Elementary</a> .</p>
        </div>
 
         <div class= "box_extend">
@@ -83,7 +83,7 @@
          <div class= "box_extend">
              <h4>Will's Jams Concert</h4>
             <img class="box-img" src ="img/Wills_Jams_concert.jpg" alt="Will's Jams concert infront of kids"width=720 height=350>
-            <p>Will’s Jams concert
+            <p><a class="inline_link" href="https://www.willsjams.com/live-shows">Will’s Jams concert</a>
                 Young children at Franklin Elementary were rocking out at the Will's Jams concert, part of the Grandma on the Move school tour.
                 </p>
             </div>
