--- a/actionplan.html
+++ b/actionplan.html
@@ -57,7 +57,7 @@
                 <li><a href="initiatives.html">Initiatives</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
-                <li><a href="contact & comment.html">Contact</a></li>
+                <li><a href="contact_&_comment.html">Contact</a></li>
                 <li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
 
             </ul>
