fixed inline link text color

--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -22,6 +22,7 @@
 		<title>Infrastructure | Vancouver BC School Active Travel Program</title>
         <link rel="stylesheet" href="./greg_css/greg_style.css">
         <link rel="stylesheet" href="./greg_css/greg_extra.css">
+        <link rel="stylesheet" href="/jacob-css/jacob_extra.css">
 
 
 	</head>
