--- a/art.html
+++ b/art.html
@@ -24,10 +24,21 @@
         <link rel="stylesheet" href="./greg_css/greg_extra.css">
 
 	</head>
+
+    <!-- Button from http://androidcss.com/css/css3-floating-button-tutorial-->
+
+<a href="#top" class="float">
+    <i class="fa fa-envelope my-float"></i>
+    </a>
+    <div class="label-container">
+    <div class="label-text">Back to top</div>
+    <i class="fa fa-play label-arrow"></i>
+    </div>
+
 <body>
         
     <nav class="main-nav">
-        <div class="wrapper">
+        <div id="top" class="wrapper">
 
             <section class="top-container">
                 <header class="showcase-top">
