--- a/initiatives.html
+++ b/initiatives.html
@@ -28,12 +28,23 @@
 </head>
 <!-- end Head -->
 
+<!-- Button from http://androidcss.com/css/css3-floating-button-tutorial-->
+
+<a href="#top" class="float">
+    <i class="fa fa-envelope my-float"></i>
+    </a>
+    <div class="label-container">
+    <div class="label-text">Back to top</div>
+    <i class="fa fa-play label-arrow"></i>
+    </div>
+
+
 <!-- Main Page Body, it is enveloped in the class "wrapper" for better control -->
 <body>
     <div class="wrapper">
 
         <!-- Top Container, holds the main header/image for the page -->
-        <section class="top-container">
+        <section id="top" class="top-container">
             <header class="showcase-top">
                 <h1>Initiatives</h1>
             </header>
