--- a/actionplan.html
+++ b/actionplan.html
@@ -25,7 +25,19 @@
     <!-- Window Title -->
     <title>Action Plan | Vancouver BC School Active Travel Program</title>
 </head>
+
+
 <!-- end Head -->
+
+<!-- Button from http://androidcss.com/css/css3-floating-button-tutorial-->
+
+<a href="#top" class="float">
+    <i class="fa fa-envelope my-float"></i>
+    </a>
+    <div class="label-container">
+    <div class="label-text">Back to top</div>
+    <i class="fa fa-play label-arrow"></i>
+    </div>
 
 <!-- Main Page Body, it is enveloped in the class "wrapper" for better control -->
 <body>
@@ -42,7 +54,7 @@
             </header>
         </section> -->
 
-        <section class="top-container">
+        <section id="top" class="top-container">
             <header class="showcase-top">
                 <h1>Action Plan</h1>
             </header>
